--- a/static/page/login/index.scss
+++ b/static/page/login/index.scss
@@ -227,9 +227,10 @@ button, input[type="checkbox"] {
           }
           input {
             width: 125px;
-            line-height: 32px;
+            line-height: 29px;
             display: block;
             font-size: 14px;
+            padding-left:5px;
             border: none;
             outline: none;
             float: left;
