--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -3,6 +3,22 @@ body{
   padding: 0 !important;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #eef1f6;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #edf7ff;
+}
+
+
 .header{
   max-height: 60px;
 }
@@ -23,3 +39,4 @@ body{
     margin: 20px auto;
   }
 }
+
