--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -18,7 +18,6 @@ body{
   background: #edf7ff;
 }
 
-
 .header{
   max-height: 60px;
 }
@@ -40,3 +39,9 @@ body{
   }
 }
 
+.user{
+  img{
+    width: 55px;
+    height: 55px;
+  }
+}
