前端页面 调整     1. 完成 tree 组件 渲染操作     2. 添加 UI 到github 同步

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -197,6 +197,10 @@ html,body {
   border: 1px solid #424F63;
 }
 
+.el-tree-node__content .is-leaf{
+  display: none;
+}
+
 .clearfix:after {
   content: " ";
   display: block;
