--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -21,6 +21,7 @@ html,body {
 }
 
 .slide {
+  transition: .4s all;
   width: 300px;
   min-width: 30px;
   position: absolute;
@@ -32,7 +33,6 @@ html,body {
   .decorate {
     cursor: pointer;
     min-width: 300px;
-    float: left;
     .logo{
       line-height: 60px;
       font-size: 20px;
@@ -85,6 +85,7 @@ html,body {
 }
 
 .left{
+  transition: .4s all;
   position: absolute;
   left: 300px;
   width: calc(100% - 300px);
@@ -217,4 +218,12 @@ html,body {
   height: 24px;
   display: inline-block;
   *zoom: 1;
+}
+
+.slideOpen{
+  width: 60px;
+}
+.leftOpen{
+  left: 60px;
+  width: calc(100% - 60px);
 }
