菜单配置     1. 添加key     2. 完善核心模块 主页     1. 删除无效的输出
仓库管理
    1. fixed a bug in hock

登录页面
    1. fixed a 显示 bug .left

server
    1. 添加上传文件接口
    2. 修改登录接口
    3. 准备真正与后台接轨

--- a/static/page/login/index.scss
+++ b/static/page/login/index.scss
@@ -104,7 +104,7 @@ button, input[type="checkbox"] {
   background-position: 0 -570px;
 }
 
-.center {
+#center {
   position: absolute;
   right: 0;
   left: 0;
@@ -118,13 +118,13 @@ button, input[type="checkbox"] {
   box-shadow: 0 0 5px 0 #000a0e, 0 5px 7px 0 #000a0e;
   overflow: hidden;
   *zoom: 1;
-  .left, .right {
+  .left__center, .right {
     position: relative;
     width: 50%;
     height: 100%;
     float: left;
   }
-  .left {
+  .left__center {
     text-align: center;
     .box {
       position: absolute;
