图片服务搭建完成     1.  现在上传头像已经没有问题 本地服务器开启     2. 更换前台专属服务器 完善主服务器     3. 更加优化对于json数据的解析 完善首页数据 解决当用户名过长显示不正常的问题 调整 TODOLIST 部分样式

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -409,3 +409,11 @@ html, body {
 }
 
 /*** bigger ******************************************/
+
+/* 用户头像 */
+.avatar-uploader{
+  .el-upload{
+    border-radius: 50% !important;
+    border:none !important;
+  }
+}
