打印承运协议核心完成

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -395,6 +395,14 @@ html, body {
     }
   }
   .p1{
+    .p1_inner{
+      width: 800px;
+      margin: auto;
+    }
+    .p1_2{
+      float: left;
+      width: 400px;
+    }
 
   }
   .p2{
