业务处理-出库发运 调整 打印承运协议

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -395,15 +395,16 @@ html, body {
     }
   }
   .p1{
+    .el-dialog__body{
+      width: 1640px;
+    }
     .p1_inner{
-      width: 800px;
-      margin: auto;
+      margin: 0 20px;
     }
     .p1_2{
       float: left;
       width: 400px;
     }
-
   }
   .p2{
 
