出库操作 打印组合分拣单 完成

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -426,6 +426,19 @@ html, body {
       }
     }
   }
+  .p3 {
+    .el-dialog__body {
+      width: 1120px;
+    }
+    .p3_inner {
+      margin: 0 5px;
+    }
+    .cell {
+      span {
+        display: block;
+      }
+    }
+  }
 }
 
 @media print {
