--- a/static/page/warehousingTask/index.scss
+++ b/static/page/warehousingTask/index.scss
@@ -3,37 +3,47 @@
   min-width: 890px;
   position: relative;
 }
+
 #warehousingTask .demo-table-expand {
   font-size: 0;
 }
+
 #warehousingTask .demo-table-expand label {
   width: 90px;
   color: #99a9bf;
 }
+
 #warehousingTask .demo-table-expand .el-form-item {
   margin-right: 0;
   margin-bottom: 0;
   width: 80%;
 }
+
 #warehousingTask .el-table__expand-column .el-table__expand-icon {
   height: 39px;
 }
+
 #warehousingTask .table {
   transition: 1s all;
 }
+
 #warehousingTask .el-carousel__container {
   height: 440px;
 }
+
 .el-tooltip__popper {
   max-width: 400px;
 }
+
 .el-step__main {
   max-width: calc(100% - 60px);
 }
+
 #warehousingTask .warehousingTaskTable {
   width: 95% !important;
   margin: 20px auto;
 }
+
 #warehousingTask .datePicker {
   width: 140px !important;
   height: 24px !important;
@@ -41,30 +51,38 @@
   margin-right: 18px;
   float: left;
 }
+
 #warehousingTask .datePicker .el-input__inner {
   border-radius: 2px !important;
   height: 24px !important;
 }
+
 #warehousingTask .add {
   background: url("/static/images/add.png") no-repeat center;
 }
+
 #warehousingTask .del {
   background: url("/static/images/del.png") no-repeat center;
 }
+
 #warehousingTask .search {
   background: url("/static/images/search.png") no-repeat center;
 }
+
 #warehousingTask .sel {
   background: url("/static/images/sel.png") no-repeat center;
 }
+
 #warehousingTask .icon {
   float: left;
 }
+
 #warehousingTask .btn span {
   float: left;
   margin-top: 4px;
   margin-left: 2px;
 }
+
 #warehousingTask .btn {
   height: 24px;
   line-height: 1;
@@ -80,22 +98,28 @@
   margin-top: 29px;
   margin-right: 16px;
 }
+
 #warehousingTask .btn-print {
   margin-right: 0;
 }
+
 #warehousingTask .btn:hover {
   color: #5468ee;
 }
+
 #warehousingTask .inner {
   margin: 0 20px;
 }
+
 #warehousingTask .btn-nav {
   height: 60px;
   overflow: hidden;
 }
+
 #warehousingTask .btn-nav .el-input .el-input__inner {
   height: 24px;
 }
+
 #warehousingTask .btn-nav .el-input {
   float: left;
   margin-top: 29px;
@@ -103,36 +127,45 @@
   width: 140px;
   height: 24px;
 }
+
 .steps {
   position: absolute;
   bottom: 10px;
   left: 30px;
   margin: auto;
 }
+
 .el-dialog__headerbtn {
   position: absolute;
   right: 25px;
   top: 15px;
 }
+
 .el-step__main {
   margin-left: -8px !important;
 }
+
 .select {
 
 }
+
 .select .input {
-  width: 70%;
+  width: 70% !important;
 }
+
 #warehousingTask .btn-nav2 {
   height: 25px;
 }
+
 #warehousingTask .btn-nav2 .el-input {
   margin-top: 0;
 }
+
 #warehousingTask .btn-nav2 .btn {
   margin-top: 0;
   background: #fff;
 }
+
 #warehousingTask .list2_table {
   width: 98%;
   margin: 1%;
