--- a/static/page/inputLedger/index.scss
+++ b/static/page/inputLedger/index.scss
@@ -2,32 +2,126 @@
   width: 100%;
   min-width: 890px;
   position: relative;
+
+  .demo-table-expand {
+    font-size: 0;
+
+    label {
+      width: 90px;
+      color: #99a9bf;
+    }
+
+    .el-form-item {
+      margin-right: 0;
+      margin-bottom: 0;
+      width: 80%;
+    }
+  }
+
+  .el-table__expand-column .el-table__expand-icon {
+    height: 39px;
+  }
+
+  .table {
+    transition: 1s all;
+  }
+
+
+
+  .inputLedgerTable {
+    width: 95% !important;
+    margin: 20px auto;
+  }
+
+  .datePicker {
+    width: 140px !important;
+    height: 24px !important;
+    margin-top: 29px;
+    margin-right: 18px;
+    float: left;
+  }
+
+  .datePicker .el-input__inner {
+    border-radius: 2px !important;
+    height: 24px !important;
+  }
+
+  .add {
+    background: url("/static/images/add.png") no-repeat center;
+  }
+
+  .del {
+    background: url("/static/images/del.png") no-repeat center;
+  }
+
+  .search {
+    background: url("/static/images/search.png") no-repeat center;
+  }
+
+  .sel {
+    background: url("/static/images/sel.png") no-repeat center;
+  }
+
+  .icon {
+    float: left;
+  }
+
+  .btn {
+    height: 24px;
+    line-height: 1;
+    border: none;
+    background: #f8fafb;
+    outline: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+    color: #1f2d3d;
+    margin-top: 29px;
+    margin-right: 16px;
+
+  }
+
+  .btn span {
+    float: left;
+    margin-top: 4px;
+    margin-left: 2px;
+  }
+
+  .btn-print {
+    margin-right: 0;
+  }
+
+  .btn:hover {
+    color: #5468ee;
+  }
+
+  .inner {
+    margin: 0 20px;
+  }
+
+  .btn-nav {
+    height: 60px;
+    overflow: hidden;
+
+    .el-input {
+      float: left;
+      margin-top: 29px;
+      margin-right: 18px;
+      width: 140px;
+      height: 24px;
+
+      .el-input__inner {
+        height: 24px;
+      }
+    }
+  }
+  .el-date-editor--daterange.el-input {
+    width: 100%;
+  }
 }
 
-#inputLedger .demo-table-expand {
-  font-size: 0;
-}
-
-#inputLedger .demo-table-expand label {
-  width: 90px;
-  color: #99a9bf;
-}
-
-#inputLedger .demo-table-expand .el-form-item {
-  margin-right: 0;
-  margin-bottom: 0;
-  width: 80%;
-}
-
-#inputLedger .el-table__expand-column .el-table__expand-icon {
-  height: 39px;
-}
-
-#inputLedger .table {
-  transition: 1s all;
-}
-
-#inputLedger .el-carousel__container {
+.el-carousel__container {
   height: 440px;
 }
 
@@ -39,93 +133,6 @@
   max-width: calc(100% - 60px);
 }
 
-#inputLedger .inputLedgerTable {
-  width: 95% !important;
-  margin: 20px auto;
-}
-
-#inputLedger .datePicker {
-  width: 140px !important;
-  height: 24px !important;
-  margin-top: 29px;
-  margin-right: 18px;
-  float: left;
-}
-
-#inputLedger .datePicker .el-input__inner {
-  border-radius: 2px !important;
-  height: 24px !important;
-}
-
-#inputLedger .add {
-  background: url("/static/images/add.png") no-repeat center;
-}
-
-#inputLedger .del {
-  background: url("/static/images/del.png") no-repeat center;
-}
-
-#inputLedger .search {
-  background: url("/static/images/search.png") no-repeat center;
-}
-
-#inputLedger .sel {
-  background: url("/static/images/sel.png") no-repeat center;
-}
-
-#inputLedger .icon {
-  float: left;
-}
-
-#inputLedger .btn span {
-  float: left;
-  margin-top: 4px;
-  margin-left: 2px;
-}
-
-#inputLedger .btn {
-  height: 24px;
-  line-height: 1;
-  border: none;
-  background: #f8fafb;
-  outline: none;
-  cursor: pointer;
-  padding: 0;
-  margin: 0;
-  font-size: 14px;
-  color: #1f2d3d;
-  margin-top: 29px;
-  margin-right: 16px;
-}
-
-#inputLedger .btn-print {
-  margin-right: 0;
-}
-
-#inputLedger .btn:hover {
-  color: #5468ee;
-}
-
-#inputLedger .inner {
-  margin: 0 20px;
-}
-
-#inputLedger .btn-nav {
-  height: 60px;
-  overflow: hidden;
-}
-
-#inputLedger .btn-nav .el-input .el-input__inner {
-  height: 24px;
-}
-
-#inputLedger .btn-nav .el-input {
-  float: left;
-  margin-top: 29px;
-  margin-right: 18px;
-  width: 140px;
-  height: 24px;
-}
 
 .steps {
   position: absolute;
@@ -159,10 +166,4 @@
 
 .el-step__main {
   margin-left: -8px !important;
-}
-
-#inputLedger {
-  .el-date-editor--daterange.el-input {
-    width: 100%;
-  }
 }
