打印承运协议 再次压缩

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -465,6 +465,12 @@ html, body {
     }
     .p1_inner {
       margin: 0 20px;
+      h2 {
+        margin: 0;
+      }
+      p {
+        margin: 3px 0;
+      }
     }
     .p1_2 {
       float: left;
